surfacide/tree-sitter-surface/grammar.js
    source_file: $ => seq(
      $.module_header,
      repeat($._top_level),
    ),

    // ── Comments & strings ─────────────────────────────────────────────────

    string: $ => choice(
      $._triple_string,
      $._simple_string,
    ),

    _simple_string: $ => token(seq(
      '"',
      repeat(choice(/[^"\\\n]/, /\\./)),
      '"',
    )),

    _triple_string: $ => token(seq(
      '"""',
      /([^"]|"[^"]|""[^"])*/,
      '"""',
    )),

    // ── Module header & imports ────────────────────────────────────────────

    module_header: $ => seq(
      'module',
      field('name', $.qualified_name),
      optional(field('visibility', 'private')),
    ),

    _top_level: $ => choice(
      $.use_decl,
      $.doc_string,
      $.type_decl,
      $.actor_decl,
      $.event_decl,
      $.const_decl,
      $.extern_decl,
      $.observable_decl,
      $.actor_observable_decl,
      $.history_predicate_decl,
      $.attacker_decl,
      $.scenario_decl,
      $.property_decl,
      $.surface_block,
      $.substrate_block,
      $.partial_substrate_block,
      $.compose_block,
      $.tla_block,
    ),

    history_predicate_decl: $ => seq(
      'history_predicate',
      field('name', $.identifier),
      $.param_list,
      '{',
      field('body', $._expression),
      '}',
    ),

    param_list: $ => seq(
      '(',
      commaSep($.param),
      ')',
    ),

    param: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.type_expr),
    ),

    type_expr: $ => choice(
      $._non_union_type,
      $.union_type,
    ),

    _non_union_type: $ => choice(
      $.simple_type,
      $.qualified_type,
      $.generic_type,
      $.tuple_type,
      $.record_type,
      $.enum_type,
    ),

    simple_type: $ => $.identifier,

    surface_block: $ => seq(
      'surface',
      '{',
      repeat($._surface_item),
      '}',
    ),

    _surface_item: $ => choice(
      $.doc_string,
      $.defaults_block,
      $.state_block,
      $.init_block,
      $.fairness_decl,
      $.observable_decl,
      $.actor_observable_decl,
      $.property_decl,
      $.action_decl,
      $.internal_action_decl,
    ),

    init_block: $ => seq(
      'init',
      '{',
      repeat($._effect),
      '}',
    ),

    action_decl: $ => seq(
      'action',
      field('name', $.identifier),
      $.param_list,
      optional(seq('->', field('return_type', $.type_expr))),
      repeat($._action_clause),
    ),

    _action_clause: $ => choice(
      $.by_clause,
      $.when_clause,
      $.raises_block,
      $.slot_assign,
      $.then_block,
    ),

    slot_assign: $ => seq(
      field('slot', $._slot_name),
      ':',
      field('value', $.slot_value),
    ),

    _slot_name: $ => choice(
      'idempotency',
      'auth_channel',
      'retention',
      'rate_limit',
      'observability',
      'availability',
      'freshness',
    ),

    slot_value: $ => choice(
      $.slot_waiver,
      $.slot_set,
      $.slot_call,
    ),

    slot_set: $ => seq(
      '{',
      commaSep1(field('channel', $.identifier)),
      optional(','),
      '}',
    ),

    call_args: $ => seq(
      '(',
      commaSep($.call_arg),
      ')',
    ),

    call_arg: $ => choice(
      $.named_arg,
      $._expression,
    ),

    then_block: $ => seq(
      'then',
      repeat($._effect),
    ),

    // ── Effects ────────────────────────────────────────────────────────────

    _effect: $ => choice(
      $.assign_effect,
      $.compound_assign_effect,
      $.map_assign_effect,
      $.delete_effect,
      $.snoc_effect,
      $.emit_effect,
      $.return_effect,
      $.let_effect,
      $.if_effect,
      $.if_let_effect,
      $.match_effect,
      $.for_effect,
      $.sends_effect,
    ),

    assign_effect: $ => prec.right(seq(
      field('target', $._lvalue),
      ':=',
      field('value', $._expression),
    )),

    if_effect: $ => seq(
      'if',
      field('guard', $._expression),
      'then',
      optional(field('then_label', $.branch_label)),
      repeat($._effect),
      optional($.else_clause),
    ),

    else_clause: $ => seq(
      'else',
      optional(field('else_label', $.branch_label)),
      repeat($._effect),
    ),

    branch_label: $ => seq(
      '[',
      field('name', $.identifier),
      ']',
    ),

    _lvalue: $ => choice(
      $.identifier,
      $.field_access,
      $.index_expr,
    ),

    // ── Substrate block ────────────────────────────────────────────────────

    _expression: $ => choice(
      $.let_expr,
      $.if_expr,
      $.if_let_expr,
      $.match_expr,
      $._binary_expr,
    ),

    let_expr: $ => prec.right(PREC.let_expr, seq(
      'let',
      field('name', $.identifier),
      ':=',
      field('value', $._let_value),
      'in',
      field('body', $._expression),
    )),

    _let_value: $ => choice(
      $.if_expr,
      $.if_let_expr,
      $.match_expr,
      $._binary_no_in,
    ),

    tuple_pattern: $ => prec(2, seq(
      '(',
      $.identifier,
      ',',
      commaSep1($.identifier),
      ')',
    )),

    _binary_expr: $ => choice(
      $.binary_expr,
      $._unary_expr,
    ),

    binary_expr: $ => choice(
      prec.left(PREC.or, seq($._binary_expr, '||', $._binary_expr)),
      prec.left(PREC.and, seq($._binary_expr, '&&', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, '==', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, '!=', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, '<', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, '<=', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, '>', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, '>=', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, 'in', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, 'not', 'in', $._binary_expr)),
      prec.left(PREC.compare, seq($._binary_expr, 'is', $.identifier)),
      prec.left(PREC.compare, seq($._binary_expr, 'subset', $._binary_expr)),
      prec.left(PREC.set_op, seq($._binary_expr, 'union', $._binary_expr)),
      prec.left(PREC.set_op, seq($._binary_expr, 'intersect', $._binary_expr)),
      prec.left(PREC.set_op, seq($._binary_expr, 'diff', $._binary_expr)),
      prec.left(PREC.set_op, seq($._binary_expr, 'cross', $._binary_expr)),
      prec.left(PREC.add, seq($._binary_expr, '+', $._binary_expr)),
      prec.left(PREC.add, seq($._binary_expr, '-', $._binary_expr)),
      prec.left(PREC.mul, seq($._binary_expr, '*', $._binary_expr)),
      prec.left(PREC.mul, seq($._binary_expr, '/', $._binary_expr)),
      prec.right(PREC.compare, seq($._binary_expr, '=>', $._binary_expr)),
    ),

    _postfix_expr: $ => choice(
      $.field_access,
      $.index_expr,
      $.call_expr,
      $._primary_expr,
    ),

    field_access: $ => prec.left(PREC.field, seq(
      field('object', $._postfix_expr),
      choice($._dot_id_token, $._dot_int_token),
    )),

    _dot_id_token: $ => alias(token(seq('.', /[a-zA-Z_][a-zA-Z_0-9]*/)), $.dotted_field),
    _dot_int_token: $ => alias(token(seq('.', /\d+/)), $.dotted_index),

    call_expr: $ => prec(PREC.application, seq(
      field('callee', $._postfix_expr),
      $.call_args,
    )),

    tuple_expr: $ => seq(
      '(',
      $._expression,
      ',',
      commaSep1($._expression),
      ')',
    ),

    comprehension: $ => prec.dynamic(2, seq(
      '{',
      $._comp_head,
      '|',
      commaSep1($._comp_clause),
      '}',
    )),

    map_literal: $ => seq(
      '{',
      commaSep1($.map_literal_entry),
      optional(','),
      '}',
    ),

    map_literal_entry: $ => seq(
      field('key', $.tuple_expr),
      '->',
      field('value', $._expression),
    ),

    _comp_head: $ => choice(
      $.comp_map_arrow,
      $._expression,
    ),

    comp_map_arrow: $ => prec.right(3, seq(
      $._binary_expr,
      '->',
      $._expression,
    )),

    _comp_clause: $ => choice(
      $.comp_binder,
      $._expression,
    ),

    comp_binder: $ => prec(2, seq(
      field('name', choice($.identifier, $.tuple_pattern)),
      'in',
      field('source', $._binary_expr),
    )),

    bool_lit: $ => choice('true', 'false'),
    qualified_name: $ => prec.right(seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    )),

    identifier_expr: $ => $.identifier,

    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,
    number: $ => /\d+/,
  },
});
